Added rounded-0 to buttons

--- a/subscribe/templates/subscribe/subscribe.html
+++ b/subscribe/templates/subscribe/subscribe.html
@@ -13,7 +13,7 @@
                 <h1 class="text-center uppercase">Did you forgot?</h1>
                 <h2 class="text-center mt-5 mb-5">{{ message }}</h2>
                 <!-- BACK TO SITE BUTTON -->
-                <a href="{% url 'home' %}" class="shop-now-button btn btn-md uppercase">Back To Site</a>
+                <a href="{% url 'home' %}" class="shop-now-button btn btn-md uppercase rounded-0">Back To Site</a>
             </div>
         </div>
     </div>
@@ -24,7 +24,7 @@
                 <h1 class="text-center uppercase">Warning!</h1>
                 <h2 class="text-center mt-5 mb-5">{{ message }}</h2>
                 <!-- BACK TO SITE BUTTON -->
-                <a href="{% url 'home' %}" class="shop-now-button btn btn-md uppercase">Back To Site</a>
+                <a href="{% url 'home' %}" class="shop-now-button btn btn-md uppercase rounded-0">Back To Site</a>
             </div>
         </div>
     </div>
@@ -35,7 +35,7 @@
                 <h1 class="text-center uppercase">Thanks for subscribing!</h1>
                 <h2 class="text-center mt-5 mb-5">{{ message }}</h2>
                 <!-- BACK TO SITE BUTTON -->
-                <a href="{% url 'home' %}" class="shop-now-button btn btn-md uppercase">Back To Site</a>
+                <a href="{% url 'home' %}" class="shop-now-button btn btn-md uppercase rounded-0">Back To Site</a>
             </div>
         </div>
     </div>
@@ -46,7 +46,7 @@
                 <h1 class="text-center uppercase">Subscription Page</h1>
                 <h2 class="text-center mt-5 mb-5">{{ message }}</h2>
                 <!-- BACK TO SITE BUTTON -->
-                <a href="{% url 'home' %}" class="shop-now-button btn btn-md uppercase">Back To Site</a>
+                <a href="{% url 'home' %}" class="shop-now-button btn btn-md uppercase rounded-0">Back To Site</a>
             </div>
         </div>
     </div>
