--- a/templates/403.html
+++ b/templates/403.html
@@ -9,7 +9,7 @@
             <h1 class="text-center uppercase">403 Error!</h1>
             <h2 class="text-center mt-5 mb-5">Sorry, but you're not allowed to do that! </h2>
             <!-- BACK TO SITE BUTTON -->
-            <a href="{% url 'home' %}" class="shop-now-button btn btn-md uppercase">Back To Site</a>
+            <a href="{% url 'home' %}" class="shop-now-button btn btn-md uppercase rounded-0">Back To Site</a>
         </div>
     </div>
 </div>
