--- a/templates/500.html
+++ b/templates/500.html
@@ -9,7 +9,7 @@
             <h1 class="text-center uppercase">500 Error!</h1>
             <h2 class="text-center mt-5 mb-5">Sorry, but there was an internal server error. This was our fault! </h2>
             <!-- BACK TO SITE BUTTON -->
-            <a href="{% url 'home' %}" class="shop-now-button btn btn-md uppercase">Back To Site</a>
+            <a href="{% url 'home' %}" class="shop-now-button btn btn-md uppercase rounded-0">Back To Site</a>
         </div>
     </div>
 </div>
