Added required to subforms input field

--- a/templates/base.html
+++ b/templates/base.html
@@ -211,7 +211,7 @@
                     {% csrf_token %}
                     <div class="form-group subscribe py-2 w-100">
                         <input type="email" class="form-control rounded-0" id="email" name="email"
-                            placeholder="Enter your e-mail">
+                            placeholder="Enter your e-mail" required>
                         <button class="btn subscribe-button rounded-0" type="submit" aria-label="Subscribe">
                             <span class="d-none d-sm-block uppercase">Subscribe</span> <i
                                 class="far fa-envelope d-sm-none"></i>
