--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -173,7 +173,9 @@
                 {% if request.user.is_authenticated %}
                 <form method="POST" action="{% url 'add_review' product.id %}">
                     {% csrf_token %}
-                    {{ form|crispy }}
+                    {% for field in form %}
+                    {{ field | as_crispy_field }}
+                    {% endfor %}
                     <div class="text-center mt-3">
                         <button class="review-button btn btn-sm rounded-0 text-uppercase py-2" type="submit">Add
                             Review</button>
