--- a/templates/base.html
+++ b/templates/base.html
@@ -211,8 +211,8 @@
                     {% csrf_token %}
                     <div class="form-group subscribe py-2 w-100">
                         <input type="email" class="form-control rounded-0" id="email" name="email"
-                            placeholder="Enter your e-mail" required>
-                        <button class="btn subscribe-button rounded-0" type="submit" aria-label="Subscribe">
+                            placeholder="Enter your e-mail" aria-label="Subscribe field" required>
+                        <button class="btn subscribe-button rounded-0" type="submit" aria-label="Subscribe button">
                             <span class="d-none d-sm-block uppercase">Subscribe</span> <i
                                 class="far fa-envelope d-sm-none"></i>
                         </button>
