--- a/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
+++ b/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
@@ -5,7 +5,7 @@
     </a>
     {% if not widget.required %}
         <div class="custom-control custom-checkbox mt-2">
-            <input class="custom-control-label" type="checkbox" name="{{ widget.checkbox_name }}" id="{{ widget.checkbox_id }}">
+            <input class="custom-control-input" type="checkbox" name="{{ widget.checkbox_name }}" id="{{ widget.checkbox_id }}">
             <label class="custom-control-label text-danger" for="{{ widget.checkbox_id }}">{{ widget.clear_checkbox_label }}</label>
         </div>
     {% endif %}<br>
@@ -14,4 +14,4 @@
 <span class="btn add-button rounded-0 btn-file">
     Choose Image <input id="new-image" type="{{ widget.type }}" name="{{ widget.name }}"{% include "django/forms/widgets/attrs.html" %}>
 </span>
-<strong><p class="text-danger" id="filename"></p></strong>
+<p class="text-danger" id="filename"></p>
