--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -37,9 +37,9 @@
                 {% endif %}
                 {% endfor %}
                 <div class="text-right">
+                    <a class="btn btn-md rounded-0 remove-button" href="{% url 'products' %}">Cancel</a>
                     <!-- EDIT BUTTON -->
                     <button class="btn rounded-0 account-secoundary-btn px-0" type="submit">Update Product</button>
-                    <a class="btn btn-md rounded-0 remove-button" href="{% url 'products' %}">Cancel</a>
                 </div>
             </form>
         </div>
@@ -48,12 +48,12 @@
 
 {% endblock %}
 
-{% block poastloadjs %}
+{% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript">
-        // DISPLAYES A PREVIEW OF THE IMAGE
+    <script>
+        // DISPLAYES TEXT FOR THE NEW IMAGE
         $('#new-image').change(function () {
-            var file = $('#new-image')[0].files[0];
+            let file = $('#new-image')[0].files[0];
             $('#filename').text(`Image will be set to: ${file.name}`);
         });
     </script>
