--- a/templates/base.html
+++ b/templates/base.html
@@ -102,8 +102,7 @@
                         <div class="dropdown-menu border-0 dd-menu" aria-labelledby="desktop-user-options">
                             {% if request.user.is_authenticated %}
                             {% if request.user.is_superuser %}
-                            <a href="{% url 'add_product' %}" class="dropdown-item"><i class="far fa-clipboard"></i>
-                                Product Management</a>
+                            <a href="{% url 'add_product' %}" class="dropdown-item"><i class="far fa-clipboard"></i> Management</a>
                             {% endif %}
                             <a href="{% url 'profile' %}" class="dropdown-item"><i class="fas fa-portrait"></i>
                                 Profile</a>
